--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">GreenDao</string>
+    <string name="app_name">Database</string>
     <string name="results">Results:</string>
 </resources>
